! Fixed noteoff recording to work correctly, moved toggle to seq menu with other commonly accessed toggles 
  (pooplog)
* Fixed minusminus button to decrease to 0 (pooplog)
+ UNDO/REDO for pattern and sequence editing!!! (pooplog)
! slight reordering of interface due to user request for more intuitive use (pooplog)
+ Native and VST Plugins realtime mouse tweak recording!!! (pooplog&JAZ)
+ Value Dialog in machines shows offset hex values so they can be used easily with rest of program (pooplog)
+ Added "Xerox" button to seq editor (named that until someone suggests a good 5 letter word for duplicate) 
  [Alk] (poolog)
+ Added Swing Fill command (pooplog)
! Increased max lines/pattern to 256 (pooplog)
+ Basic Mousewheel support for pattern edit mode (pooplog)
* Fixed song bpm and tpb being misreported to machines if they used FF or FE command
! VU Meters are all nicer
+ Look of Machine Wires can be changed in the visual dialog (pooplog)
! Many small Optimizations and improvements
+ Multiple Selections in the sequencer menu (ctrl or shift + left mouse button or drag) can be deleted, copied, 
  pasted, etc. [sue] (pooplog)
! Cleaned up Status Bar (pooplog)
! Made Master Machine Dialog modeless, updates display if volume attenuated
+ VST:Added Hex display + Param list update when tweaking the GUI (indicates which param is being modified)
+ Added commands FDxx and FBxx (trigger delay and retrigger, xx/256 lines speed) and FAxy for all generator 
  types. (pooplog)
! Fixed the crash bug happening when changing from waveout to Directound (and viceversa).
* Complete pattern display overhaul, including many new features and bugfixes (pooplog)
! Fixed two memory leaks when loading songs with plugins (native as well as VST)
* Litte redesign in the Toolbar and control bars. Pending "Next/Previous" Machine to select the correct one.
+ SHIFT+Left mouse button moves cursor with selection drags, or drops cursor without disturbing selection (pooplog)